--- a/src/components/infoCard/infoCard.module.css
+++ b/src/components/infoCard/infoCard.module.css
@@ -50,7 +50,7 @@
   margin-bottom: 48px;
 }
 
-img {
+.imgContainer img {
   width: 100%;
   height: 100%;
 }
