--- a/src/components/topBanner/topBanner.module.css
+++ b/src/components/topBanner/topBanner.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  min-height: 490px;
 }
 
 .content {
@@ -40,6 +41,7 @@
 .img {
   width: 100%;
   display: block;
+  height: 100%;
 }
 
 @media only screen and (max-width: 865px) {
